# MyClaude

./: .gitignore  PROJECT_ANALYSIS_AND_OPTIMIZATION.md  README.md  config.example.yaml  pyproject.toml  run_evals.py
evals/: suite.yaml
mewcode/: __init__.py  __main__.py  agent.py  app.py  cache.py  client.py  config.py  conversation.py  prompts.py  remote.py  runtime.py  validator.py  web_content.py
myclaude/: __main__.py  agent.py  app.py  askuser_dialog.py  cache.py  cache_contract.py  client.py  config.py  conversation.py  diagnostics.py  driver.py  model_capabilities.py  orchestration.py  permission_dialog.py  plan_dialog.py  prompts.py  provider_state.py  remote.py  run_context.py  runtime.py  runtime_assembler.py  serialization.py  session_dialog.py  teammate_tree.py  trust.py  usage.py  validator.py  verification.py  web_content.py
tests/: test_agent.py  test_cache_contract.py  test_claude_parity.py  test_clear.py  test_clients.py  test_commands.py  test_consolidation.py  test_context.py  test_context_ledger.py  test_context_window.py  test_coordinator_multi_team.py  test_diff.py  test_edit_file.py  test_eval.py  test_hardening.py  test_hooks.py  test_mcp.py  test_memory.py  test_orchestration.py  test_permissions.py  test_provider_state.py  test_recovery.py  test_replacement_state.py  test_run_context.py  test_runtime_safety.py  test_serialization.py  test_skills.py  test_subagent.py  test_teams.py  test_tool_call_block.py  test_tool_contracts.py  test_tool_search.py  test_trust.py  test_verification_gate.py  test_worktree.py  verify_subagent.py
(+217 files in other folders)
