[project]
name = "mewcode"
version = "0.3.0"
description = "A focused terminal coding agent with durable context and safe tool execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.1.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "websockets>=14.0",
]

[project.scripts]
mewcode = "mewcode.__main__:main"

[project.urls]
Repository = "https://github.com/LittleSongxx/MyClaude"

[tool.hatch.build.targets.wheel]
packages = ["mewcode"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Keep the first CI gate focused on correctness defects rather than forcing a
# repository-wide style rewrite.
select = ["E9", "F63", "F7", "F82"]
